# roc-aws-lambda-platform

./: .gitignore  README.md  build.sh  deploy.sh  dockerfile  effects.roc  hello.roc  http.roc  main.roc  webpage.roc
.github/workflows/: docs.yaml
platform/: Cargo.toml  Effect.roc  Env.roc  Stdout.roc  build.sh  libapp.dylib  main.roc
platform/src/: glue_manual.rs  http_client.rs  lib.rs  main.rs  roc_app.rs
