[package]
name = "host"
edition = "2021"
version = "0.0.1"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
libc = "0.2"
roc_std = { path = "src/roc_std", features = ["std"] }
lambda_runtime = "0.8.3"
serde = "1.0.136"
serde_json = "1.0.114"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
reqwest = { version = "0.11.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
roc_fn = { path = "src/roc_fn" }

[workspace]
